--- a/Draw/Controller/Draw/Offline/OfflineDrawViewController.xib
+++ b/Draw/Controller/Draw/Offline/OfflineDrawViewController.xib
@@ -58,7 +58,7 @@
 					<object class="IBUIImageView" id="622016577">
 						<reference key="NSNextResponder" ref="774585933"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{0, 42}, {320, 338}}</string>
+						<string key="NSFrame">{{-5, 42}, {330, 338}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="47539283"/>
@@ -881,10 +881,12 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>clickActionButton:</string>
 							<string>clickBackButton:</string>
+							<string>clickDrawImage:</string>
 							<string>clickSendButton:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -896,6 +898,7 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>clickActionButton:</string>
 							<string>clickBackButton:</string>
+							<string>clickDrawImage:</string>
 							<string>clickSendButton:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -906,6 +909,10 @@
 							</object>
 							<object class="IBActionInfo">
 								<string key="name">clickBackButton:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
+								<string key="name">clickDrawImage:</string>
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
@@ -921,6 +928,7 @@
 							<string>actionButton</string>
 							<string>commentInput</string>
 							<string>commentLabel</string>
+							<string>drawImageButton</string>
 							<string>guessStatLabel</string>
 							<string>inputBackground</string>
 							<string>inputBackgroundView</string>
@@ -936,6 +944,7 @@
 							<string>UIButton</string>
 							<string>UITextView</string>
 							<string>UILabel</string>
+							<string>UIButton</string>
 							<string>UILabel</string>
 							<string>UIImageView</string>
 							<string>UIView</string>
@@ -954,6 +963,7 @@
 							<string>actionButton</string>
 							<string>commentInput</string>
 							<string>commentLabel</string>
+							<string>drawImageButton</string>
 							<string>guessStatLabel</string>
 							<string>inputBackground</string>
 							<string>inputBackgroundView</string>
@@ -977,6 +987,10 @@
 							<object class="IBToOneOutletInfo">
 								<string key="name">commentLabel</string>
 								<string key="candidateClassName">UILabel</string>
+							</object>
+							<object class="IBToOneOutletInfo">
+								<string key="name">drawImageButton</string>
+								<string key="candidateClassName">UIButton</string>
 							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">guessStatLabel</string>
