--- a/Draw/Controller/Draw/Offline/OfflineDrawViewController~ipad.xib
+++ b/Draw/Controller/Draw/Offline/OfflineDrawViewController~ipad.xib
@@ -54,10 +54,10 @@
 					<object class="IBUIImageView" id="772470985">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{0, 91}, {768, 737}}</string>
+						<string key="NSFrame">{{-6, 91}, {780, 737}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="979769366"/>
+						<reference key="NSNextKeyView" ref="462324922"/>
 						<int key="IBUITag">20120403</int>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -72,7 +72,7 @@
 						<string key="NSFrame">{{149, 65}, {470, 87}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="597535188"/>
+						<reference key="NSNextKeyView" ref="641462429"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -100,7 +100,7 @@
 						<string key="NSFrameSize">{768, 109}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="718529543"/>
+						<reference key="NSNextKeyView" ref="979769366"/>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<object class="NSCustomResource" key="IBUIImage" id="1009745718">
@@ -125,7 +125,7 @@
 						<string key="NSFrame">{{603, 13}, {155, 67}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="772470985"/>
+						<reference key="NSNextKeyView" ref="597535188"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -296,7 +296,7 @@
 						<string key="NSFrame">{{173, 13}, {423, 70}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="641462429"/>
+						<reference key="NSNextKeyView" ref="772470985"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<int key="IBUIContentMode">7</int>
@@ -371,7 +371,7 @@
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
-				<reference key="NSNextKeyView" ref="462324922"/>
+				<reference key="NSNextKeyView" ref="718529543"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -768,6 +768,7 @@
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="clickActionButton:">id</string>
 						<string key="clickBackButton:">id</string>
+						<string key="clickDrawImage:">id</string>
 						<string key="clickSendButton:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
@@ -779,6 +780,10 @@
 							<string key="name">clickBackButton:</string>
 							<string key="candidateClassName">id</string>
 						</object>
+						<object class="IBActionInfo" key="clickDrawImage:">
+							<string key="name">clickDrawImage:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="clickSendButton:">
 							<string key="name">clickSendButton:</string>
 							<string key="candidateClassName">id</string>
@@ -788,6 +793,7 @@
 						<string key="actionButton">UIButton</string>
 						<string key="commentInput">UITextView</string>
 						<string key="commentLabel">UILabel</string>
+						<string key="drawImageButton">UIButton</string>
 						<string key="guessStatLabel">UILabel</string>
 						<string key="inputBackground">UIImageView</string>
 						<string key="inputBackgroundView">UIView</string>
@@ -810,6 +816,10 @@
 						<object class="IBToOneOutletInfo" key="commentLabel">
 							<string key="name">commentLabel</string>
 							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="drawImageButton">
+							<string key="name">drawImageButton</string>
+							<string key="candidateClassName">UIButton</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="guessStatLabel">
 							<string key="name">guessStatLabel</string>
